--- a/node_play/package.json
+++ b/node_play/package.json
@@ -5,7 +5,8 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "mon": "nodemon main.js"
+    "mon": "nodemon main.js",
+    "mon2": "nodemon main-20191008.js"
   },
   "author": "",
   "license": "ISC",
